#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([main], [0.01a], [REPORT-ADDRESS])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/main.cpp])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_CONFIG_SUBDIRS(lib/sqlite)
AC_OUTPUT(Makefile src/Makefile)
